--- a/index.html
+++ b/index.html
@@ -9,7 +9,163 @@
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="navbar navbar-dark bg-dark" style="background-color: #e3f2fd;">
+            <a class="navbar-brand" href="#">
+              <img src="images/logo.svg.png" width="220" height="30" alt="">
+            </a>
+            <div class="continuar-cp">
+                <form class="form-inline my-2 my-lg-0">
+                    <button class="btn btn-outline-primary" type="submit">Continuar comprando</button>
+                </form>
+            </div>
+          </nav>
+    </header>
+    <main class="container">
+        <form class="row dados center" id="checkout" method="GET">
+            <div class="col-md-4">
+                <header class="card-header bg-warning">
+                    <img src="images/casa.svg" alt="" srcset="" width="25" height="25">
+                    <t class="p-4 font-weight-bolder">Dados Pessoais</t>
+                </header>
+                <div class="border border-top-0 mt-2 p-4">
+                    <div class="form-group">
+                        <label for="nome-completo">Nome completo:</label>
+                        <input class="form-control" type="text" name="nomeCompleto" placeholder="Digite seu nome completo..." id="nome-completo">
+                    </div>
+                    <div class="form-group">                        
+                        <label for="cpf">CPF:</label>
+                        <input class="form-control" type="text" name="cpf" placeholder="Digite seu CPF..." id="cpf">
+                    </div>
+                    <div class="form-group">
+                        <label for="telefone">Telefone:</label>
+                        <input class="form-control" type="tel" name="telefone" placeholder="Digite seu telefone..." id="telefone">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">email:</label>
+                        <input class="form-control" type="email" name="email" placeholder="Digite seu email..." id="email">
+                    </div>
+                    <div class="form-group">
+                        <label for="senha">Senha:</label>
+                        <input class="form-control" type="password" name="senha" placeholder="Digite uma senha..." id="senha">
+                    </div>
+                    <div class="form-group">
+                        <label for="conf-senha">Confirmar senha:</label>
+                        <input class="form-control" type="password" name="conf-senha" placeholder="Confirme sua senha..." id="conf-senha">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <header class="card-header bg-warning">
+                    <img src="images/caixa-de-correio.png" alt="" srcset="" width="25" height="25">
+                    <t class="p-4 font-weight-bolder">Dados de Entrega</t>
+                </header>
+                <div class="border border-top-0 mt-2 p-4">
+                    <div class="form-group">
+                        <label for="cep">CEP:</label>
+                        <input class="form-control" type="text" name="cpf" placeholder="Digite seu CEP..." id="cep">
+                    </div>
+                    <div class="form-group">                        
+                        <label for="endereco">Endereço:</label>
+                        <input class="form-control" type="text" name="endereco" placeholder="Digite seu endereço..." id="endereco">
+                    </div>
+                    <div class="form-group">
+                        <label for="numero">Numero:</label>
+                        <input class="form-control" type="number" name="numero" placeholder="Digite o numero..." id="numero">
+                    </div>
+                    <div class="form-group">
+                        <label for="complemento">Complemento:</label>
+                        <input class="form-control" type="text" name="complemento" placeholder="Digite um complemento..." id="complemento">
+                    </div>
+                    <div class="form-group">
+                        <label for="bairro">Bairro:</label>
+                        <input class="form-control" type="text" name="bairro" placeholder="Digite um bairro..." id="bairro">
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-6">
+                            <label for="cidade">Cidade:</label>
+                            <input class="form-control" type="text" name="cidade" placeholder="..." id="cidade">
+                        </div>
+                        <div class="col-6">
+                            <label for="estado">Estado:</label>
+                            <select class="form-control" name="estado" id="estado">
+                                <option value="" disabled selected>Estado</option>
+                                <option value="SP">SP</option>
+                                <option value="RJ">RJ</option>
+                                <option value="ES">ES</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="forma-envio">Forma de envio:</label>
+                        <select class="form-control" name="forma-envio" id="forma-envio">
+                            <option value="" disabled selected>Forma de envio</option>
+                            <option value="50">Rapida - R$ 50,00</option>
+                            <option value="20">Normal - R$ 20,00</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <header class="card-header bg-warning">
+                    <img src="images/doacao.svg" alt="" srcset="" width="25" height="25">
+                    <t class="p-4 font-weight-bolder">Dados de Pagamento</t>
+                </header>
+                <div class="border mt-2 p-4">
+                    <table class="table table-striped">
+                        <thead class="">
+                          <tr>
+                            <th scope="col">Produtos</th>
+                            <th scope="col">Preço</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                              <th scope="row">Camiseta</th>
+                              <td>R$ 40,00</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Calça</th>
+                                <td>R$ 100,00</td>
+                              </tr>
+                              <tr>
+                                <th scope="row">Bermuda</th>
+                                <td>R$ 50,00</td>
+                              </tr>
+                        </tbody>
+                    </table>
+                    <h5 class="p-2">Total R$ </h5>
+                </div>
+                <div class="border border-top-0 mt-2 p-4">
+                    <div class="form-group">
+                        <label for="numeroCartao">Numero do cartão:</label>
+                        <input class="form-control" type="text" name="numeroCartao" placeholder="Digite o numero do cartão..." id="numeroCartao">
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-9">
+                            <label for="data-validade">Data validade:</label>
+                            <input class="form-control" type="month" name="data-validade" placeholder="data-validade" id="data-validade">
+                        </div>
+                        <div class="col-3">
+                            <label for="cod-cartao">CVV:</label>
+                            <input class="form-control" type="text" name="cod-cartao" placeholder="..." id="cod-cartao">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="nome-titular">Nome titular:</label>
+                        <input class="form-control" type="text" name="nome-titular" placeholder="Digite um complemento..." id="nome-titular">
+                    </div>
+                    <div class="form-group">
+                        <label for="cpf-titular">CPF do titular:</label>
+                        <input class="form-control" type="text" name="cpf-titular" placeholder="Digite o CPF do titular..." id="cpf-titular">
+                    </div>
+                    <div class="d-flex justify-content-end">
+                        <button type="submit" class="btn btn-success" id="btn-finalizar">Finalizar compra</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </main>
     <script src="js/script.js"></script>
 </body>
 </html>
